kubernetes-nginx-ingress-www-redirects/service-with-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
  labels:
    app: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
