kubernetes-nginx-ingress-www-redirects/example-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
spec:
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: example-app.com
    http:
      paths:
      - path: /example-app
        pathType: Prefix
        backend:
          service:
            name: example-app-service
            port:
              number: 80
  tls:
  - hosts:
    - example-app.com
    secretName: example-cert
